# rusTfhe

./: .gitignore  Cargo.toml  LICENSE  README.md  core
crypto/: Cargo.toml  core
crypto/src/: digest.rs  lib.rs  main.rs  tfhe.rs  tlwe.rs  trgsw.rs  trlwe.rs
hom_nand/: Cargo.toml
hom_nand/examples/: homnand-bench.rs
hom_nand/src/: digest.rs  lib.rs  main.rs  tfhe.rs  tlwe.rs  trgsw.rs  trlwe.rs
math_utils/: Cargo.toml
math_utils/src/: lib.rs
nander/: Cargo.toml
nander/src/: lib.rs  main.rs
src/: crypto.rs  lib.rs
src/crypto/: digest.rs  math.rs  tlwe.rs  trgsw.rs  trlwe.rs
src/crypto/utils/: math.rs
utils/: Cargo.toml  build.rs
utils/src/: lib.rs  macros.rs  math.rs  mem.rs  spqlios.rs  traits.rs
utils/src/spqlios/: fft_processor_spqlios.cpp  spqlios-fft-impl.cpp  spqlios-fft.h  spqlios-wrapper.cpp
