[package]
name = "crypto"
version = "0.1.0"
authors = ["hideki1217 <okumurahidekikangeki@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

utils={path="../utils"}
num="0.4"
array-macro="2.1"
debug_print="1.0"
itertools="0.10"
threadpool="1.8"




